# calver-scm

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  pyproject.toml
.gitbub/: renovate.json
.github/: labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-dist.yml  coverage.yml  lint.yml  pr-labeler.yml  publish.yml  python-ci.yml  renovate-config.yml  tests.yml
src/calver_scm/: __init__.py  calver_version.py  config.py  parser.py  scheme.py  utils.py
src/scm_calver_config/: __init__.py
tests/: test_calver.py  test_calver_version.py  test_scheme_e2e.py
