[project]
name = "scm-calver-config"
version = "0.1.0-alpha"
description = "Configurable CalVer versioning plugin for setuptools-scm"
requires-python = ">=3.9"
dependencies = [
    "setuptools-scm>=9.2.2",
]

[project.urls]
Repository = "https://github.com/samcorky/scm-calver-config"
Issues = "https://github.com/samcorky/scm-calver-config/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scm_calver_config"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--tb=short",
]

[tool.ruff]
line-length = 88

[tool.mypy]
mypy_path = "src"
files = ["src", "tests"]

[project.entry-points."setuptools_scm.version_scheme"]
calver_scm = "scm_calver:calver_scm"

[project.entry-points."setuptools_scm.local_scheme"]
calver_local = "scm_calver:calver_local"
